# deutsch-deid

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/: quickstart.ipynb
examples/files/: praktikum_bewerbung.docx  praktikum_bewerbung.txt
src/deutsch_deid/: __init__.py  types.py
src/deutsch_deid/analysis/: analyzer.py  context_awareness.py  overlap_resolver.py
src/deutsch_deid/anonymization/: engine.py  fake_data.py  strategies.py
src/deutsch_deid/config/: entities.py  scoring.py
src/deutsch_deid/patterns/: german_keywords.py  german_patterns.py
src/deutsch_deid/processors/: __init__.py  doc_processor.py  text_processor.py
src/deutsch_deid/recognizers/: __init__.py  _helpers.py  _utils.py  base.py  contact.py  datetime.py  device.py  location.py  social.py  spacy_recognizer.py  tax.py
tests/: test.py
